--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Replace John Doe with your name -->
 
-    <p>Hi, I am John Doe, I am a Kalvian.</p>
+    <p>Hi, I am Angel Mary, I am a Kalvian.</p>
 
 </body>
 
